build/log/idf_py_stderr_output_46611
Command: make -j 6 all
/workspace/components/ai_service/ai_service.c: In function '_http_event_handler':
/workspace/components/ai_service/ai_service.c:84:5: error: enumeration value 'HTTP_EVENT_ON_HEADERS_COMPLETE' not handled in switch [-Werror=switch]
   84 |     switch(evt->event_id) {
      |     ^~~~~~
/workspace/components/ai_service/ai_service.c:84:5: error: enumeration value 'HTTP_EVENT_ON_STATUS_CODE' not handled in switch [-Werror=switch]
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/ai_service/CMakeFiles/__idf_ai_service.dir/build.make:79: esp-idf/ai_service/CMakeFiles/__idf_ai_service.dir/ai_service.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7995: esp-idf/ai_service/CMakeFiles/__idf_ai_service.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
